--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="csrf-token" content="<%= csrfToken %>" />
-    <link href="./css/style.css" rel="stylesheet" />
+    <link href="./css/styles.css" rel="stylesheet" />
     <title>To-Do Manager</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="./css/style.css" rel="stylesheet" />
   </head>
   <body>
     <div class="grid grid-cols-6">
