--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,6 @@ body {
     background: white;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-.Todo-Item:hover .trash-icon{
+.todo-item:hover .delete-icon{
     display:block;
 }
